# logs-dataset

./: .gitignore  CITATION.cff  README.md  create_mini_error_dataset.py  demo_opik.py  main.py  pyproject.toml
apache/: README.md  apache_access_parsed.csv  apache_access_types.csv  apache_error_compiled.csv  apache_error_mini.csv  apache_error_parsed.csv  apache_error_types.csv  mini_apache_error.csv
evalx/: README.md  pyproject.toml
evalx/src/evalx/: __init__.py  evalx.py
evalx/tests/: test_evalx.py
gentrace/: run_gentrace_severity.py
openssh/: README.md  openssh_log_types.csv  openssh_types.csv
